# HopInvaders

./: .gitignore  CMakeLists.txt
assets/dev/: AnimatedThruster.xcf  PixelHop.xcf  PixelHopThruster.xcf
src/: assetmanager.cpp  bullet.h  events.h  game.cpp  game.h  player.cpp  player.h  sprite.h  textcomponent.cpp  textcomponent.h  texture.cpp  texture.h  window.cpp  window.h
src/components/: countingcomponent.cpp  countingcomponent.h  textcomponent.cpp  textcomponent.h
src/core/: assetmanager.cpp  assetmanager.h  collider.cpp  collider.h  events.h  game.cpp  game.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h  sprite.cpp  texture.cpp  texture.h  window.cpp  window.h
src/entity/: bullet.cpp  bullet.h
